--- a/topo-blend/QtAwesome/QtAwesome.qrc
+++ b/topo-blend/QtAwesome/QtAwesome.qrc
@@ -1,5 +1,5 @@
 <RCC>
-	<qresource prefix="/">
-		<file>fonts/fontawesome.ttf</file>
-	</qresource>
+    <qresource prefix="/">
+        <file>fonts/fontawesome-4.4.0.ttf</file>
+    </qresource>
 </RCC>
